--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "multi-sig-wallet",
-  "version": "1.0.0",
-  "description": "> Since we couldn't find a minimalistic & maintained and simple eth multi signiture wallet we decided to create our own one.",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node_modules/.bin/electron ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Bit-Nation/multi-sig-wallet.git"
-  },
-  "author": "Floiran Lenz <florian@bitnation.co>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Bit-Nation/multi-sig-wallet/issues"
-  },
-  "homepage": "https://github.com/Bit-Nation/multi-sig-wallet#readme",
-  "devDependencies": {
-    "electron": "^1.7.9",
-    "electron-reload": "^1.2.2"
-  },
-  "dependencies": {
-    "web3": "^1.0.0-beta.26"
-  }
+    "name": "multi-sig-wallet",
+    "version": "1.0.0",
+    "description": "> Since we couldn't find a minimalistic & maintained and simple eth multi signiture wallet we decided to create our own one.",
+    "main": "main.js",
+    "scripts": {
+        "test": "truffle test",
+        "coverage": "./node_modules/.bin/solidity-coverage",
+        "dev": "node_modules/.bin/electron ."
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Bit-Nation/multi-sig-wallet.git"
+    },
+    "author": "Floiran Lenz <florian@bitnation.co>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Bit-Nation/multi-sig-wallet/issues"
+    },
+    "homepage": "https://github.com/Bit-Nation/multi-sig-wallet#readme",
+    "devDependencies": {
+        "electron": "^1.7.9",
+        "electron-reload": "^1.2.2",
+        "solidity-coverage": "^0.4.4"
+    },
+    "dependencies": {
+        "web3": "^1.0.0-beta.26"
+    }
 }
